Corrected Heading spacing and form filter format

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,6 +102,7 @@ footer p {
 
 .main {
 	padding: 20px;
+	padding-top: 50px;
 }
 
 .action-btn {
@@ -129,6 +130,16 @@ footer p {
 
 .filter-btn{
 	display: block;
+}
+
+.filter_form .form-group{
+	min-width: 30%;
+}
+
+.filter_form {
+	padding: 10px;
+	outline: auto;
+	margin-top: 5px;
 }
 
 
